# slidingpuzzle

./: .gitignore  Cargo.toml  README.org  build.sh  host.txt  rustfmt.toml
helpers/: theme_normalize_rgba.py
resources/: theme_unnormal.json
src/: main.rs
src/game/: drawable.rs  mod.rs  scene.rs  tile.rs
src/game/animation/: animatable.rs  animation.rs  mod.rs
src/game/gmenu/: game_menu.rs  main_menu.rs  menu_item.rs  menu_item_list.rs  menu_mapping.rs  mod.rs  puzzle_listing.rs  puzzle_view.rs
src/game/input/: controller.rs  keyboard.rs  mod.rs
src/game/multiplayer/: game_view.rs  join_scene.rs  mod.rs  transport.rs
src/game/player/: mod.rs  settings_scene.rs
src/game/puzzle/: mod.rs  puzzle_listing.rs  puzzle_view.rs
src/game/puzzle/tiles/: mod.rs  tile.rs  tile_multiplayer.rs  tile_random.rs  tile_state.rs
src/game/resources/: image_loader.rs  manager.rs  mod.rs  theme.rs
src/game/tiles/: mod.rs  tile.rs  tile_state.rs
src/game/ui/: mod.rs  uitext.rs
