[package]
name = "slidingpuzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "multiplayer" ]
multiplayer = ["dep:webrtc", "dep:flume", "dep:tokio", "dep:bytes", "dep:base64", "dep:serde_json" ]


[dependencies]

webrtc = { version = "0.6", optional = true }
flume = { version = "0.10", optional = true }
tokio = { version = "1", optional = true }
bytes = { version = "1", optional = true }
base64 = { version = "0.13", optional = true }
serde_json = { version =  "1", optional = true }


ggez = "0.8"
glam = "0.20.3"
image = "0.24"
rand = "0.8.5"

uuid = { version = "1", features = [ "serde", "v4" ] }
bincode = "1"
serde = "1"

lazy_static = "1"

keyframe = "1"
keyframe_derive = "1"

chrono = { version = "0.4", features = [ "default", "serde" ] }
